# NIR

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  makefile
GCC/: CMakeLists.txt  GCC_class.cpp  GCC_class.hpp
GPS/: CMakeLists.txt  GPS_class.cpp  GPS_class.hpp
TDE/: CMakeLists.txt  GCC_class.cpp  GPS_GRZ_class.cpp  GPS_class.cpp  TDE_class.cpp  TDE_class.hpp
TDE_TOOLS/: main.cpp  main.hpp
TDE_TOOLS/GCC/: CMakeLists.txt  GCC_class.cpp  GCC_class.hpp
TDE_TOOLS/GPS/: CMakeLists.txt  GPS_class.cpp  GPS_class.hpp
TDE_TOOLS/TDE/: CMakeLists.txt  TDE_class.cpp  TDE_class.hpp
TDE_TOOLS/core/: CMakeLists.txt  core.hpp
TDE_TOOLS/fft/: CMakeLists.txt  fft_forward_class.hpp  fft_reverse_class.cpp
TDE_TOOLS/program_environment/: CMakeLists.txt  program_environment.cpp  program_environment.hpp
cmd_util/: CMakeLists.txt  main.cpp  main.hpp  program_environment.cpp  sigint.cpp  sound_provider.cpp
core/: CMakeLists.txt  core.cpp  core.hpp
correlation/: correlation_class.cpp  correllation_class.hpp
fft/: CMakeLists.txt  core.cpp  fft_base.cpp  fft_forward_class.cpp  fft_reverse_class.cpp  fft_reverse_class.hpp  goerzel.c  grz_forward_class.cpp  sfft_class.cpp  sliding_fft.c
include/: GCC_class.hpp  GPS_class.hpp  TDE_class.hpp  fft_forward_class.hpp  fft_reverse_class.hpp
include/FFT/: fft_base.hpp  fft_forward_class.hpp  fft_reverse_class.hpp  grz_forward_class.hpp  sfft_class.hpp
include/TDE/: GCC_class.hpp  GPS_GRZ_class.hpp  GPS_class.hpp  TDE_class.hpp
include/inc/: lib.hpp  main.hpp
include/logger/: logger.hpp
include/src/: lib.cpp
include/util_helper/: program_environment.hpp  sound_provider.hpp
internal_include/: core.hpp  goerzel.h  loop_unrolling.h  program_environment.hpp  sigint.hpp  sliding_fft.h  sound_provider.hpp
internal_include/rt_audio/: RtAudio.h
internal_include/util_helper/: sigint.hpp
logger/: CMakeLists.txt  logger.cpp
phase/: phase_class.cpp  phase_class.hpp
rt_audio/: CMakeLists.txt  RtAudio.cpp  rtaudio_c.cpp
source/: correlation.cpp  phase.cpp
src/: correlation.cpp  main.cpp  main.hpp  phase.cpp
test/: CMakeLists.txt  calc_test.cpp  goerz_test.cpp  main.cpp  mem_bench.sh  test_env.hpp
time_benchmark/: CMakeLists.txt  main.cpp  mem_bench.cpp  time_benchmark.hpp
util_helper/: CMakeLists.txt  program_environment.cpp  sigint.cpp  sound_provider.cpp
